# Meeseeks

./: .gitignore  README.md  bot.py  pyproject.toml
src/plugins/: bili_video.py
